--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,6 +33,7 @@
   color: black;
   cursor: pointer;
   font-size: 1.3rem;
+  text-decoration: none;
   background-color: orange;
 }
 .large_text {
