--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,6 +1,6 @@
 .container {
   width: 20rem;
-  height: 28rem;
+  height: 35rem;
   margin: auto;
   margin-top: 8rem;
   border-radius: 2rem;
@@ -8,7 +8,7 @@
   /* border: 1px solid black; */
 }
 .form {
-  margin-top: 4rem;
+  margin-top: 2rem;
 }
 .feild {
   width: 18rem;
@@ -29,7 +29,7 @@
   font-weight: 900;
   text-align: center;
   /* margin-top: 4rem; */
-  padding-top: 2rem;
+  padding-top: 1rem;
 }
 .submit {
   width: 8rem;
@@ -45,4 +45,24 @@
 .submit:hover {
   color: black;
   background-color: orange;
+}
+.title,
+.language {
+  display: block;
+  padding-bottom: 1rem;
+}
+.title label,
+.language label {
+  font-size: 1.3rem;
+  padding-left: 1.1rem;
+}
+.title select {
+  width: 9rem;
+  height: 1.6rem;
+  font-size: 1.3rem;
+}
+.language select {
+  width: 6.3rem;
+  height: 1.6rem;
+  font-size: 1.3rem;
 }
