--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,6 +4,7 @@
 </head>
 <body>
   <div class="login">
+    <%if(messages.error){%> <%=messages.error%> <%}%>
     <div class="container">
       <h1>Log In</h1>
       <form action="/login" method="POST" class="form">
