--- a/views/register.ejs
+++ b/views/register.ejs
@@ -10,6 +10,24 @@
       <form action="/register" method="POST" class="form">
         <input type="text" placeholder="Name" class="feild" name="Name" />
         <input type="text" placeholder="Email" class="feild" name="Email" />
+        <div class="title">
+          <label for="title">Choose a Title : </label>
+          <select name="Title" id="title">
+            <option value="New Bie">New Bie</option>
+            <option value="Intermediate">Intermediate</option>
+            <option value="Advanced">Advanced</option>
+          </select>
+        </div>
+        <div class="language">
+          <label for="language">Choose a Language : </label>
+          <select name="Language" id="language">
+            <option value="C">C</option>
+            <option value="C">CPP</option>
+            <option value="C">JAVA</option>
+            <option value="C">PYTHON</option>
+          </select>
+        </div>
+
         <input
           type="password"
           placeholder="Password"
